--- a/micronaut-graalpy/build.gradle
+++ b/micronaut-graalpy/build.gradle
@@ -10,10 +10,11 @@ micronautBuild {
 
 repositories {
     mavenCentral()
+    maven{ url = "file:///tmp/local_graalvm_repo" }
 }
 
 dependencies {
-    api(group: "org.graalvm.python", name: "python", version: libs.versions.graalpy.get(), ext: "pom", transitive: true)
+    api(group: "org.graalvm.python", name: "python-community", version: libs.versions.graalpy.get(), ext: "pom", transitive: true)
     api libs.graalpy.embedding
     api 'io.micronaut:micronaut-aop'
 }
