--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ micronaut-docs = "2.0.0"
 micronaut-test = "4.7.0"
 groovy = "4.0.22"
 managed-graalpy = "24.1.2"
+sonatype-scan = "3.0.0"
 
 [libraries]
 # Core
@@ -32,4 +33,5 @@ junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine" }
 
 managed-graalpy = { module = 'org.graalvm.python:python', version.ref = 'managed-graalpy' }
 managed-graalpy-embedding = { module = 'org.graalvm.python:python-embedding', version.ref = 'managed-graalpy' }
+sonatype-scan = { module = "org.sonatype.gradle.plugins:scan-gradle-plugin", version.ref = "sonatype-scan" }
 
